[CSA-35] Fixed sonar audit